--- a/extend/pom.xml
+++ b/extend/pom.xml
@@ -15,27 +15,27 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>mybatis-parent</artifactId>
-        <groupId>io.mybatis</groupId>
-        <version>1.0.0-Preview</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>mybatis-parent</artifactId>
+    <groupId>io.mybatis</groupId>
+    <version>1.0.0-Preview</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mybatis-extend</artifactId>
+  <artifactId>mybatis-extend</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.mybatis</groupId>
-            <artifactId>mybatis-provider</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>io.mybatis</groupId>
+      <artifactId>mybatis-provider</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
