--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
   <packaging>pom</packaging>
   <version>1.0.0-Preview</version>
 
-  <name>MyBatis Mapper</name>
-  <description>MyBatis Mapper</description>
+  <name>mybatis-parent</name>
+  <description>MyBatis Mapper Parent</description>
   <url>https://mybatis.io</url>
 
   <licenses>
@@ -55,10 +55,10 @@
     <module>service</module>
     <module>activerecord</module>
     <module>common</module>
+    <module>generator</module>
   </modules>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
