--- a/extend/pom.xml
+++ b/extend/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>mybatis-parent</artifactId>
     <groupId>io.mybatis</groupId>
-    <version>1.0.0-Preview</version>
+    <version>1.0.0-RC</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
