--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>mybatis-parent</artifactId>
     <groupId>io.mybatis</groupId>
-    <version>1.0.0-RC</version>
+    <version>1.0.0-RC2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
