--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,6 @@
 
   <modules>
     <module>mapper</module>
-    <module>extend</module>
     <module>service</module>
     <module>activerecord</module>
     <module>common</module>
@@ -65,7 +64,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine>-Dfile.encoding=UTF-8</argLine>
 
-    <provider.version>1.0.0-Preview</provider.version>
+    <provider.version>1.0.0-SNAPSHOT</provider.version>
 
     <mybatis.version>3.5.6</mybatis.version>
     <mybatis-spring.version>2.0.6</mybatis-spring.version>
