--- a/jpa/src/test/resources/log4j.properties
+++ b/jpa/src/test/resources/log4j.properties
@@ -13,5 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
-io.mybatis.provider.extend.ExtendEntityFactory
+log4j.rootLogger=ERROR, stdout
+#MyBatis\u65E5\u5FD7\u914D\u7F6E
+log4j.logger.io.mybatis=TRACE
+#\u63A7\u5236\u53F0\u8F93\u51FA\u914D\u7F6E
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
