--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <groupId>io.mybatis</groupId>
   <artifactId>mybatis-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-RC2</version>
+  <version>1.0.0-SNAPSHOT</version>
 
   <name>mybatis-parent</name>
   <description>MyBatis Mapper Parent</description>
@@ -55,6 +55,7 @@
     <module>activerecord</module>
     <module>common</module>
     <module>generator</module>
+    <module>jpa</module>
   </modules>
 
   <properties>
