--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <groupId>io.mybatis</groupId>
   <artifactId>mybatis-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>${revision}</version>
 
   <name>mybatis-parent</name>
   <description>MyBatis Mapper Parent</description>
@@ -59,13 +59,14 @@
   </modules>
 
   <properties>
+    <revision>1.0.0-RC3</revision>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine>-Dfile.encoding=UTF-8</argLine>
 
-    <provider.version>1.0.0-SNAPSHOT</provider.version>
+    <provider.version>1.0.0-RC3</provider.version>
 
     <mybatis.version>3.5.7</mybatis.version>
     <mybatis-spring.version>2.0.6</mybatis-spring.version>
