--- a/pom.xml
+++ b/pom.xml
@@ -59,14 +59,14 @@
   </modules>
 
   <properties>
-    <revision>1.0.0-RC4</revision>
+    <revision>1.0.0</revision>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine>-Dfile.encoding=UTF-8</argLine>
 
-    <provider.version>1.0.0-RC3</provider.version>
+    <provider.version>1.0.0</provider.version>
 
     <mybatis.version>3.5.7</mybatis.version>
     <mybatis-spring.version>2.0.6</mybatis-spring.version>
