--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine>-Dfile.encoding=UTF-8</argLine>
 
-    <provider.version>1.0.0</provider.version>
+    <provider.version>1.0.1-SNAPSHOT</provider.version>
 
     <mybatis.version>3.5.7</mybatis.version>
     <mybatis-spring.version>2.0.6</mybatis-spring.version>
@@ -91,16 +91,19 @@
         <groupId>org.mybatis</groupId>
         <artifactId>mybatis</artifactId>
         <version>${mybatis.version}</version>
+        <optional>true</optional>
       </dependency>
       <dependency>
         <groupId>org.mybatis</groupId>
         <artifactId>mybatis-spring</artifactId>
         <version>${mybatis-spring.version}</version>
+        <optional>true</optional>
       </dependency>
       <dependency>
         <groupId>org.mybatis.spring.boot</groupId>
         <artifactId>mybatis-spring-boot-starter</artifactId>
         <version>${mybatis-spring-boot.version}</version>
+        <optional>true</optional>
       </dependency>
 
       <!-- Spring 版本控制 -->
