重构多语言组件，解决没有默认语言包的问题，简化语言包的使用

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -27,4 +27,10 @@
 
   <artifactId>mybatis-common</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+  </dependencies>
 </project>
