添加 GitHub Actions 配置，自动测试和发布 Maven 中央仓库

--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
 
   <profiles>
     <profile>
-      <id>deploy-oss-maven</id>
+      <id>release</id>
       <build>
         <plugins>
           <!-- Source -->
@@ -250,16 +250,32 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <gpgArguments>
+                <argument>--pinentry-mode</argument>
+                <argument>loopback</argument>
+              </gpgArguments>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
           </plugin>
         </plugins>
       </build>
       <distributionManagement>
         <snapshotRepository>
-          <id>oss</id>
+          <id>ossrh</id>
           <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
         <repository>
-          <id>oss</id>
+          <id>ossrh</id>
           <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
       </distributionManagement>
