--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
   </modules>
 
   <properties>
-    <revision>1.2.1-SNAPSHOT</revision>
+    <revision>1.2.1</revision>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
