--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Publish package to the Maven Central Repository
 on:
   push:
     tags: [ "*" ]
+    branches:
+      - snapshot
 jobs:
   publish:
     runs-on: ubuntu-latest
