--- a/service/pom.xml
+++ b/service/pom.xml
@@ -31,10 +31,12 @@
     <dependency>
       <groupId>io.mybatis</groupId>
       <artifactId>mybatis-mapper</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>io.mybatis</groupId>
       <artifactId>mybatis-common</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mybatis</groupId>
