--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -2,23 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>io.mybatis</groupId>
-  <artifactId>mybatis-bom</artifactId>
-  <version>1.2.2</version>
+  <parent>
+    <artifactId>mybatis-parent</artifactId>
+    <groupId>io.mybatis</groupId>
+    <version>${revision}</version>
+  </parent>
+  <artifactId>mapper-bom</artifactId>
   <packaging>pom</packaging>
 
   <name>${project.artifactId}</name>
   <description>MyBatis Mapper (Bill of Materials) | 依赖版本管理</description>
-
-  <properties>
-    <!--
-    All dependencies listed in this pom will have version same as the version of this pom.
-    -->
-    <mapper.version>${project.version}</mapper.version>
-    <!-- 通用方法核心 -->
-    <provider.version>1.1.1</provider.version>
-  </properties>
 
   <!-- 依赖管理 -->
   <dependencyManagement>
@@ -30,34 +23,34 @@
         <version>${provider.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.mybatis</groupId>
         <artifactId>mybatis-common</artifactId>
-        <version>${mapper.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.mybatis</groupId>
         <artifactId>mybatis-mapper</artifactId>
-        <version>${mapper.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.mybatis</groupId>
         <artifactId>mybatis-service</artifactId>
-        <version>${mapper.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.mybatis</groupId>
         <artifactId>mybatis-activerecord</artifactId>
-        <version>${mapper.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.mybatis</groupId>
         <artifactId>mybatis-generator</artifactId>
-        <version>${mapper.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>${project.groupId}</groupId>
+        <groupId>io.mybatis</groupId>
         <artifactId>mybatis-jpa</artifactId>
-        <version>${mapper.version}</version>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
