--- a/mapper/pom.xml
+++ b/mapper/pom.xml
@@ -35,6 +35,7 @@
     <dependency>
       <groupId>io.mybatis</groupId>
       <artifactId>mybatis-common</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
