--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
   </modules>
 
   <properties>
-    <revision>2.0.0</revision>
+    <revision>2.0.1-SNAPSHOT</revision>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
