--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
       <dependency>
         <groupId>io.mybatis</groupId>
         <artifactId>mybatis-provider</artifactId>
-        <version>${provider.version}</version>
+        <version>2.1.2-SNAPSHOT</version>
       </dependency>
 
       <dependency>
