--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine>-Dfile.encoding=UTF-8</argLine>
-
-    <provider.version>2.1.1</provider.version>
-
+    <provider.version>2.1.2-SNAPSHOT</provider.version>
     <mybatis.version>3.5.10</mybatis.version>
     <mybatis-spring.version>2.0.7</mybatis-spring.version>
     <mybatis-spring-boot.version>2.2.2</mybatis-spring-boot.version>
