增加h2驱动和相关测试，去掉mysql依赖，完善批量查询功能，支持复合主键的批量更新。

--- a/mapper/pom.xml
+++ b/mapper/pom.xml
@@ -37,6 +37,7 @@
       <artifactId>mybatis-common</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -50,8 +51,8 @@
       <artifactId>hsqldb</artifactId>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
     </dependency>
   </dependencies>
 
