--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
 
     <logback.version>1.2.11</logback.version>
     <hsqldb.version>2.5.2</hsqldb.version>
+    <h2.version>2.1.214</h2.version>
     <junit.version>4.13</junit.version>
   </properties>
 
@@ -120,6 +121,13 @@
         <version>${hsqldb.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2.version}</version>
+        <scope>test</scope>
+      </dependency>
+
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
