--- a/pom.xml
+++ b/pom.xml
@@ -60,21 +60,21 @@
   </modules>
 
   <properties>
-    <revision>2.0.1-SNAPSHOT</revision>
+    <revision>2.1.0</revision>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine>-Dfile.encoding=UTF-8</argLine>
 
-    <provider.version>2.1.1</provider.version>
+    <provider.version>2.2.0</provider.version>
 
-    <mybatis.version>3.5.10</mybatis.version>
-    <mybatis-spring.version>2.0.7</mybatis-spring.version>
-    <mybatis-spring-boot.version>2.2.2</mybatis-spring-boot.version>
+    <mybatis.version>3.5.11</mybatis.version>
+    <mybatis-spring.version>2.1.0</mybatis-spring.version>
+    <mybatis-spring-boot.version>2.3.0</mybatis-spring-boot.version>
 
-    <springframework.version>5.3.21</springframework.version>
-    <springboot.version>2.7.1</springboot.version>
+    <springframework.version>5.3.24</springframework.version>
+    <springboot.version>2.7.7</springboot.version>
 
     <logback.version>1.2.11</logback.version>
     <hsqldb.version>2.5.2</hsqldb.version>
