--- a/jakarta-jpa/pom.xml
+++ b/jakarta-jpa/pom.xml
@@ -26,6 +26,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>mybatis-jakarta-jpa</artifactId>
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
