--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -42,6 +42,12 @@
 
     <!-- test -->
     <dependency>
+      <groupId>io.mybatis</groupId>
+      <artifactId>mybatis-mapper</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
     </dependency>
