--- a/pom.xml
+++ b/pom.xml
@@ -61,14 +61,14 @@
   </modules>
 
   <properties>
-    <revision>2.2.1</revision>
+    <revision>2.2.2</revision>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine>-Dfile.encoding=UTF-8</argLine>
 
-    <provider.version>2.2.4-SNAPSHOT</provider.version>
+    <provider.version>2.2.4</provider.version>
 
     <mybatis.version>3.5.13</mybatis.version>
     <mybatis-spring.version>2.1.0</mybatis-spring.version>
