--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
   </modules>
 
   <properties>
-    <revision>2.2.2</revision>
+    <revision>2.2.3-SNAPSHOT</revision>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
