--- a/jakarta-jpa/pom.xml
+++ b/jakarta-jpa/pom.xml
@@ -41,7 +41,7 @@
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
       <version>3.1.0</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
 
     <!-- test -->
